// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > ( a + b ** c ) 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "+",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > ( a + b / c ) 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "+",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "/",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > ( a + b instanceof c ) 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "+",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "instanceof",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > ( a / b + c ) 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "/",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "+",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > (a * b + c) * d 1`] = `
{
  "body": [
    {
      "end": 15,
      "expression": {
        "end": 15,
        "left": {
          "end": 10,
          "left": {
            "end": 6,
            "left": {
              "end": 2,
              "name": "a",
              "range": [
                1,
                2,
              ],
              "start": 1,
              "type": "Identifier",
            },
            "operator": "*",
            "range": [
              1,
              6,
            ],
            "right": {
              "end": 6,
              "name": "b",
              "range": [
                5,
                6,
              ],
              "start": 5,
              "type": "Identifier",
            },
            "start": 1,
            "type": "BinaryExpression",
          },
          "operator": "+",
          "range": [
            1,
            10,
          ],
          "right": {
            "end": 10,
            "name": "c",
            "range": [
              9,
              10,
            ],
            "start": 9,
            "type": "Identifier",
          },
          "start": 1,
          "type": "BinaryExpression",
        },
        "operator": "*",
        "range": [
          0,
          15,
        ],
        "right": {
          "end": 15,
          "name": "d",
          "range": [
            14,
            15,
          ],
          "start": 14,
          "type": "Identifier",
        },
        "start": 0,
        "type": "BinaryExpression",
      },
      "range": [
        0,
        15,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 15,
  "range": [
    0,
    15,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a !== b === c != d == e 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "left": {
              "left": {
                "name": "a",
                "type": "Identifier",
              },
              "operator": "!==",
              "right": {
                "name": "b",
                "type": "Identifier",
              },
              "type": "BinaryExpression",
            },
            "operator": "===",
            "right": {
              "name": "c",
              "type": "Identifier",
            },
            "type": "BinaryExpression",
          },
          "operator": "!=",
          "right": {
            "name": "d",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "==",
        "right": {
          "name": "e",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a & b == c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "&",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "==",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a && b | c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "&&",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "|",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "LogicalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a && b || c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "&&",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "LogicalExpression",
        },
        "operator": "||",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "LogicalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a * x ? b : c ? d : e 1`] = `
{
  "body": [
    {
      "expression": {
        "alternate": {
          "alternate": {
            "name": "e",
            "type": "Identifier",
          },
          "consequent": {
            "name": "d",
            "type": "Identifier",
          },
          "test": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "consequent": {
          "name": "b",
          "type": "Identifier",
        },
        "test": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "*",
          "right": {
            "name": "x",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "ConditionalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ** b * c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "*",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ** b ** c + d 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "left": {
              "name": "b",
              "type": "Identifier",
            },
            "operator": "**",
            "right": {
              "name": "c",
              "type": "Identifier",
            },
            "type": "BinaryExpression",
          },
          "type": "BinaryExpression",
        },
        "operator": "+",
        "right": {
          "name": "d",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ** x ? b ? c : d : e 1`] = `
{
  "body": [
    {
      "end": 22,
      "expression": {
        "alternate": {
          "end": 22,
          "name": "e",
          "range": [
            21,
            22,
          ],
          "start": 21,
          "type": "Identifier",
        },
        "consequent": {
          "alternate": {
            "end": 18,
            "name": "d",
            "range": [
              17,
              18,
            ],
            "start": 17,
            "type": "Identifier",
          },
          "consequent": {
            "end": 14,
            "name": "c",
            "range": [
              13,
              14,
            ],
            "start": 13,
            "type": "Identifier",
          },
          "end": 18,
          "range": [
            9,
            18,
          ],
          "start": 9,
          "test": {
            "end": 10,
            "name": "b",
            "range": [
              9,
              10,
            ],
            "start": 9,
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "end": 22,
        "range": [
          0,
          22,
        ],
        "start": 0,
        "test": {
          "end": 6,
          "left": {
            "end": 1,
            "name": "a",
            "range": [
              0,
              1,
            ],
            "start": 0,
            "type": "Identifier",
          },
          "operator": "**",
          "range": [
            0,
            6,
          ],
          "right": {
            "end": 6,
            "name": "x",
            "range": [
              5,
              6,
            ],
            "start": 5,
            "type": "Identifier",
          },
          "start": 0,
          "type": "BinaryExpression",
        },
        "type": "ConditionalExpression",
      },
      "range": [
        0,
        22,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 22,
  "range": [
    0,
    22,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a + b << c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "+",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "<<",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a << b + c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "<<",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "+",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a << b < c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "<<",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "<",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a == b & c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "==",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "&",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ? b : c * x ? d : e 1`] = `
{
  "body": [
    {
      "expression": {
        "alternate": {
          "alternate": {
            "name": "e",
            "type": "Identifier",
          },
          "consequent": {
            "name": "d",
            "type": "Identifier",
          },
          "test": {
            "left": {
              "name": "c",
              "type": "Identifier",
            },
            "operator": "*",
            "right": {
              "name": "x",
              "type": "Identifier",
            },
            "type": "BinaryExpression",
          },
          "type": "ConditionalExpression",
        },
        "consequent": {
          "name": "b",
          "type": "Identifier",
        },
        "test": {
          "name": "a",
          "type": "Identifier",
        },
        "type": "ConditionalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ? b : c ? d : e * x 1`] = `
{
  "body": [
    {
      "end": 21,
      "expression": {
        "alternate": {
          "alternate": {
            "end": 21,
            "left": {
              "end": 17,
              "name": "e",
              "range": [
                16,
                17,
              ],
              "start": 16,
              "type": "Identifier",
            },
            "operator": "*",
            "range": [
              16,
              21,
            ],
            "right": {
              "end": 21,
              "name": "x",
              "range": [
                20,
                21,
              ],
              "start": 20,
              "type": "Identifier",
            },
            "start": 16,
            "type": "BinaryExpression",
          },
          "consequent": {
            "end": 13,
            "name": "d",
            "range": [
              12,
              13,
            ],
            "start": 12,
            "type": "Identifier",
          },
          "end": 21,
          "range": [
            8,
            21,
          ],
          "start": 8,
          "test": {
            "end": 9,
            "name": "c",
            "range": [
              8,
              9,
            ],
            "start": 8,
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "consequent": {
          "end": 5,
          "name": "b",
          "range": [
            4,
            5,
          ],
          "start": 4,
          "type": "Identifier",
        },
        "end": 21,
        "range": [
          0,
          21,
        ],
        "start": 0,
        "test": {
          "end": 1,
          "name": "a",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "type": "ConditionalExpression",
      },
      "range": [
        0,
        21,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 21,
  "range": [
    0,
    21,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ? b : c ? d : e ** x 1`] = `
{
  "body": [
    {
      "end": 22,
      "expression": {
        "alternate": {
          "alternate": {
            "end": 22,
            "left": {
              "end": 17,
              "name": "e",
              "range": [
                16,
                17,
              ],
              "start": 16,
              "type": "Identifier",
            },
            "operator": "**",
            "range": [
              16,
              22,
            ],
            "right": {
              "end": 22,
              "name": "x",
              "range": [
                21,
                22,
              ],
              "start": 21,
              "type": "Identifier",
            },
            "start": 16,
            "type": "BinaryExpression",
          },
          "consequent": {
            "end": 13,
            "name": "d",
            "range": [
              12,
              13,
            ],
            "start": 12,
            "type": "Identifier",
          },
          "end": 22,
          "range": [
            8,
            22,
          ],
          "start": 8,
          "test": {
            "end": 9,
            "name": "c",
            "range": [
              8,
              9,
            ],
            "start": 8,
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "consequent": {
          "end": 5,
          "name": "b",
          "range": [
            4,
            5,
          ],
          "start": 4,
          "type": "Identifier",
        },
        "end": 22,
        "range": [
          0,
          22,
        ],
        "start": 0,
        "test": {
          "end": 1,
          "name": "a",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "type": "ConditionalExpression",
      },
      "range": [
        0,
        22,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 22,
  "range": [
    0,
    22,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ? b ? c ** x : d : e 1`] = `
{
  "body": [
    {
      "end": 22,
      "expression": {
        "alternate": {
          "end": 22,
          "name": "e",
          "range": [
            21,
            22,
          ],
          "start": 21,
          "type": "Identifier",
        },
        "consequent": {
          "alternate": {
            "end": 18,
            "name": "d",
            "range": [
              17,
              18,
            ],
            "start": 17,
            "type": "Identifier",
          },
          "consequent": {
            "end": 14,
            "left": {
              "end": 9,
              "name": "c",
              "range": [
                8,
                9,
              ],
              "start": 8,
              "type": "Identifier",
            },
            "operator": "**",
            "range": [
              8,
              14,
            ],
            "right": {
              "end": 14,
              "name": "x",
              "range": [
                13,
                14,
              ],
              "start": 13,
              "type": "Identifier",
            },
            "start": 8,
            "type": "BinaryExpression",
          },
          "end": 18,
          "range": [
            4,
            18,
          ],
          "start": 4,
          "test": {
            "end": 5,
            "name": "b",
            "range": [
              4,
              5,
            ],
            "start": 4,
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "end": 22,
        "range": [
          0,
          22,
        ],
        "start": 0,
        "test": {
          "end": 1,
          "name": "a",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "type": "ConditionalExpression",
      },
      "range": [
        0,
        22,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 22,
  "range": [
    0,
    22,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ? b ? c : d ** x : e 1`] = `
{
  "body": [
    {
      "expression": {
        "alternate": {
          "name": "e",
          "type": "Identifier",
        },
        "consequent": {
          "alternate": {
            "left": {
              "name": "d",
              "type": "Identifier",
            },
            "operator": "**",
            "right": {
              "name": "x",
              "type": "Identifier",
            },
            "type": "BinaryExpression",
          },
          "consequent": {
            "name": "c",
            "type": "Identifier",
          },
          "test": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "test": {
          "name": "a",
          "type": "Identifier",
        },
        "type": "ConditionalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ? b ? c : d : e ** x 1`] = `
{
  "body": [
    {
      "expression": {
        "alternate": {
          "left": {
            "name": "e",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "name": "x",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "consequent": {
          "alternate": {
            "name": "d",
            "type": "Identifier",
          },
          "consequent": {
            "name": "c",
            "type": "Identifier",
          },
          "test": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "test": {
          "name": "a",
          "type": "Identifier",
        },
        "type": "ConditionalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ? b ? c : d : e 1`] = `
{
  "body": [
    {
      "expression": {
        "alternate": {
          "name": "e",
          "type": "Identifier",
        },
        "consequent": {
          "alternate": {
            "name": "d",
            "type": "Identifier",
          },
          "consequent": {
            "name": "c",
            "type": "Identifier",
          },
          "test": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "ConditionalExpression",
        },
        "test": {
          "name": "a",
          "type": "Identifier",
        },
        "type": "ConditionalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a ^ b & c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "^",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "&",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a | b && c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "|",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "&&",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "LogicalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a || b || c 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "||",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "LogicalExpression",
        },
        "operator": "||",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "LogicalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a=b+=c-=d**=e*=f/=g%=h<<=i>>=j>>>=k&=l^=m|=n 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "+=",
          "right": {
            "left": {
              "name": "c",
              "type": "Identifier",
            },
            "operator": "-=",
            "right": {
              "left": {
                "name": "d",
                "type": "Identifier",
              },
              "operator": "**=",
              "right": {
                "left": {
                  "name": "e",
                  "type": "Identifier",
                },
                "operator": "*=",
                "right": {
                  "left": {
                    "name": "f",
                    "type": "Identifier",
                  },
                  "operator": "/=",
                  "right": {
                    "left": {
                      "name": "g",
                      "type": "Identifier",
                    },
                    "operator": "%=",
                    "right": {
                      "left": {
                        "name": "h",
                        "type": "Identifier",
                      },
                      "operator": "<<=",
                      "right": {
                        "left": {
                          "name": "i",
                          "type": "Identifier",
                        },
                        "operator": ">>=",
                        "right": {
                          "left": {
                            "name": "j",
                            "type": "Identifier",
                          },
                          "operator": ">>>=",
                          "right": {
                            "left": {
                              "name": "k",
                              "type": "Identifier",
                            },
                            "operator": "&=",
                            "right": {
                              "left": {
                                "name": "l",
                                "type": "Identifier",
                              },
                              "operator": "^=",
                              "right": {
                                "left": {
                                  "name": "m",
                                  "type": "Identifier",
                                },
                                "operator": "|=",
                                "right": {
                                  "name": "n",
                                  "type": "Identifier",
                                },
                                "type": "AssignmentExpression",
                              },
                              "type": "AssignmentExpression",
                            },
                            "type": "AssignmentExpression",
                          },
                          "type": "AssignmentExpression",
                        },
                        "type": "AssignmentExpression",
                      },
                      "type": "AssignmentExpression",
                    },
                    "type": "AssignmentExpression",
                  },
                  "type": "AssignmentExpression",
                },
                "type": "AssignmentExpression",
              },
              "type": "AssignmentExpression",
            },
            "type": "AssignmentExpression",
          },
          "type": "AssignmentExpression",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a=b+=c-=d**=e*=f/=g%=h<<=i>>=j>>>=k&=l^=m|=n 2`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "+=",
          "right": {
            "left": {
              "name": "c",
              "type": "Identifier",
            },
            "operator": "-=",
            "right": {
              "left": {
                "name": "d",
                "type": "Identifier",
              },
              "operator": "**=",
              "right": {
                "left": {
                  "name": "e",
                  "type": "Identifier",
                },
                "operator": "*=",
                "right": {
                  "left": {
                    "name": "f",
                    "type": "Identifier",
                  },
                  "operator": "/=",
                  "right": {
                    "left": {
                      "name": "g",
                      "type": "Identifier",
                    },
                    "operator": "%=",
                    "right": {
                      "left": {
                        "name": "h",
                        "type": "Identifier",
                      },
                      "operator": "<<=",
                      "right": {
                        "left": {
                          "name": "i",
                          "type": "Identifier",
                        },
                        "operator": ">>=",
                        "right": {
                          "left": {
                            "name": "j",
                            "type": "Identifier",
                          },
                          "operator": ">>>=",
                          "right": {
                            "left": {
                              "name": "k",
                              "type": "Identifier",
                            },
                            "operator": "&=",
                            "right": {
                              "left": {
                                "name": "l",
                                "type": "Identifier",
                              },
                              "operator": "^=",
                              "right": {
                                "left": {
                                  "name": "m",
                                  "type": "Identifier",
                                },
                                "operator": "|=",
                                "right": {
                                  "name": "n",
                                  "type": "Identifier",
                                },
                                "type": "AssignmentExpression",
                              },
                              "type": "AssignmentExpression",
                            },
                            "type": "AssignmentExpression",
                          },
                          "type": "AssignmentExpression",
                        },
                        "type": "AssignmentExpression",
                      },
                      "type": "AssignmentExpression",
                    },
                    "type": "AssignmentExpression",
                  },
                  "type": "AssignmentExpression",
                },
                "type": "AssignmentExpression",
              },
              "type": "AssignmentExpression",
            },
            "type": "AssignmentExpression",
          },
          "type": "AssignmentExpression",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > a|=b^=c&=d>>>=e>>=f<<=g%=h/=i*=j**=k-=l+=m=n 1`] = `
{
  "body": [
    {
      "end": 44,
      "expression": {
        "end": 44,
        "left": {
          "end": 1,
          "name": "a",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "operator": "|=",
        "range": [
          0,
          44,
        ],
        "right": {
          "end": 44,
          "left": {
            "end": 4,
            "name": "b",
            "range": [
              3,
              4,
            ],
            "start": 3,
            "type": "Identifier",
          },
          "operator": "^=",
          "range": [
            3,
            44,
          ],
          "right": {
            "end": 44,
            "left": {
              "end": 7,
              "name": "c",
              "range": [
                6,
                7,
              ],
              "start": 6,
              "type": "Identifier",
            },
            "operator": "&=",
            "range": [
              6,
              44,
            ],
            "right": {
              "end": 44,
              "left": {
                "end": 10,
                "name": "d",
                "range": [
                  9,
                  10,
                ],
                "start": 9,
                "type": "Identifier",
              },
              "operator": ">>>=",
              "range": [
                9,
                44,
              ],
              "right": {
                "end": 44,
                "left": {
                  "end": 15,
                  "name": "e",
                  "range": [
                    14,
                    15,
                  ],
                  "start": 14,
                  "type": "Identifier",
                },
                "operator": ">>=",
                "range": [
                  14,
                  44,
                ],
                "right": {
                  "end": 44,
                  "left": {
                    "end": 19,
                    "name": "f",
                    "range": [
                      18,
                      19,
                    ],
                    "start": 18,
                    "type": "Identifier",
                  },
                  "operator": "<<=",
                  "range": [
                    18,
                    44,
                  ],
                  "right": {
                    "end": 44,
                    "left": {
                      "end": 23,
                      "name": "g",
                      "range": [
                        22,
                        23,
                      ],
                      "start": 22,
                      "type": "Identifier",
                    },
                    "operator": "%=",
                    "range": [
                      22,
                      44,
                    ],
                    "right": {
                      "end": 44,
                      "left": {
                        "end": 26,
                        "name": "h",
                        "range": [
                          25,
                          26,
                        ],
                        "start": 25,
                        "type": "Identifier",
                      },
                      "operator": "/=",
                      "range": [
                        25,
                        44,
                      ],
                      "right": {
                        "end": 44,
                        "left": {
                          "end": 29,
                          "name": "i",
                          "range": [
                            28,
                            29,
                          ],
                          "start": 28,
                          "type": "Identifier",
                        },
                        "operator": "*=",
                        "range": [
                          28,
                          44,
                        ],
                        "right": {
                          "end": 44,
                          "left": {
                            "end": 32,
                            "name": "j",
                            "range": [
                              31,
                              32,
                            ],
                            "start": 31,
                            "type": "Identifier",
                          },
                          "operator": "**=",
                          "range": [
                            31,
                            44,
                          ],
                          "right": {
                            "end": 44,
                            "left": {
                              "end": 36,
                              "name": "k",
                              "range": [
                                35,
                                36,
                              ],
                              "start": 35,
                              "type": "Identifier",
                            },
                            "operator": "-=",
                            "range": [
                              35,
                              44,
                            ],
                            "right": {
                              "end": 44,
                              "left": {
                                "end": 39,
                                "name": "l",
                                "range": [
                                  38,
                                  39,
                                ],
                                "start": 38,
                                "type": "Identifier",
                              },
                              "operator": "+=",
                              "range": [
                                38,
                                44,
                              ],
                              "right": {
                                "end": 44,
                                "left": {
                                  "end": 42,
                                  "name": "m",
                                  "range": [
                                    41,
                                    42,
                                  ],
                                  "start": 41,
                                  "type": "Identifier",
                                },
                                "operator": "=",
                                "range": [
                                  41,
                                  44,
                                ],
                                "right": {
                                  "end": 44,
                                  "name": "n",
                                  "range": [
                                    43,
                                    44,
                                  ],
                                  "start": 43,
                                  "type": "Identifier",
                                },
                                "start": 41,
                                "type": "AssignmentExpression",
                              },
                              "start": 38,
                              "type": "AssignmentExpression",
                            },
                            "start": 35,
                            "type": "AssignmentExpression",
                          },
                          "start": 31,
                          "type": "AssignmentExpression",
                        },
                        "start": 28,
                        "type": "AssignmentExpression",
                      },
                      "start": 25,
                      "type": "AssignmentExpression",
                    },
                    "start": 22,
                    "type": "AssignmentExpression",
                  },
                  "start": 18,
                  "type": "AssignmentExpression",
                },
                "start": 14,
                "type": "AssignmentExpression",
              },
              "start": 9,
              "type": "AssignmentExpression",
            },
            "start": 6,
            "type": "AssignmentExpression",
          },
          "start": 3,
          "type": "AssignmentExpression",
        },
        "start": 0,
        "type": "AssignmentExpression",
      },
      "range": [
        0,
        44,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 44,
  "range": [
    0,
    44,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo( a + b ** c ) 1`] = `
{
  "body": [
    {
      "end": 17,
      "expression": {
        "arguments": [
          {
            "end": 15,
            "left": {
              "end": 6,
              "name": "a",
              "range": [
                5,
                6,
              ],
              "start": 5,
              "type": "Identifier",
            },
            "operator": "+",
            "range": [
              5,
              15,
            ],
            "right": {
              "end": 15,
              "left": {
                "end": 10,
                "name": "b",
                "range": [
                  9,
                  10,
                ],
                "start": 9,
                "type": "Identifier",
              },
              "operator": "**",
              "range": [
                9,
                15,
              ],
              "right": {
                "end": 15,
                "name": "c",
                "range": [
                  14,
                  15,
                ],
                "start": 14,
                "type": "Identifier",
              },
              "start": 9,
              "type": "BinaryExpression",
            },
            "start": 5,
            "type": "BinaryExpression",
          },
        ],
        "callee": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "end": 17,
        "optional": false,
        "range": [
          0,
          17,
        ],
        "start": 0,
        "type": "CallExpression",
      },
      "range": [
        0,
        17,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 17,
  "range": [
    0,
    17,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo( a + b instanceof c ) 1`] = `
{
  "body": [
    {
      "end": 25,
      "expression": {
        "arguments": [
          {
            "end": 23,
            "left": {
              "end": 10,
              "left": {
                "end": 6,
                "name": "a",
                "range": [
                  5,
                  6,
                ],
                "start": 5,
                "type": "Identifier",
              },
              "operator": "+",
              "range": [
                5,
                10,
              ],
              "right": {
                "end": 10,
                "name": "b",
                "range": [
                  9,
                  10,
                ],
                "start": 9,
                "type": "Identifier",
              },
              "start": 5,
              "type": "BinaryExpression",
            },
            "operator": "instanceof",
            "range": [
              5,
              23,
            ],
            "right": {
              "end": 23,
              "name": "c",
              "range": [
                22,
                23,
              ],
              "start": 22,
              "type": "Identifier",
            },
            "start": 5,
            "type": "BinaryExpression",
          },
        ],
        "callee": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "end": 25,
        "optional": false,
        "range": [
          0,
          25,
        ],
        "start": 0,
        "type": "CallExpression",
      },
      "range": [
        0,
        25,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 25,
  "range": [
    0,
    25,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo( a / b + c ) 1`] = `
{
  "body": [
    {
      "end": 16,
      "expression": {
        "arguments": [
          {
            "end": 14,
            "left": {
              "end": 10,
              "left": {
                "end": 6,
                "name": "a",
                "range": [
                  5,
                  6,
                ],
                "start": 5,
                "type": "Identifier",
              },
              "operator": "/",
              "range": [
                5,
                10,
              ],
              "right": {
                "end": 10,
                "name": "b",
                "range": [
                  9,
                  10,
                ],
                "start": 9,
                "type": "Identifier",
              },
              "start": 5,
              "type": "BinaryExpression",
            },
            "operator": "+",
            "range": [
              5,
              14,
            ],
            "right": {
              "end": 14,
              "name": "c",
              "range": [
                13,
                14,
              ],
              "start": 13,
              "type": "Identifier",
            },
            "start": 5,
            "type": "BinaryExpression",
          },
        ],
        "callee": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "end": 16,
        "optional": false,
        "range": [
          0,
          16,
        ],
        "start": 0,
        "type": "CallExpression",
      },
      "range": [
        0,
        16,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 16,
  "range": [
    0,
    16,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo( a > b instanceof c ) 1`] = `
{
  "body": [
    {
      "end": 25,
      "expression": {
        "arguments": [
          {
            "end": 23,
            "left": {
              "end": 10,
              "left": {
                "end": 6,
                "name": "a",
                "range": [
                  5,
                  6,
                ],
                "start": 5,
                "type": "Identifier",
              },
              "operator": ">",
              "range": [
                5,
                10,
              ],
              "right": {
                "end": 10,
                "name": "b",
                "range": [
                  9,
                  10,
                ],
                "start": 9,
                "type": "Identifier",
              },
              "start": 5,
              "type": "BinaryExpression",
            },
            "operator": "instanceof",
            "range": [
              5,
              23,
            ],
            "right": {
              "end": 23,
              "name": "c",
              "range": [
                22,
                23,
              ],
              "start": 22,
              "type": "Identifier",
            },
            "start": 5,
            "type": "BinaryExpression",
          },
        ],
        "callee": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "end": 25,
        "optional": false,
        "range": [
          0,
          25,
        ],
        "start": 0,
        "type": "CallExpression",
      },
      "range": [
        0,
        25,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 25,
  "range": [
    0,
    25,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo( a instanceof b + c ) 1`] = `
{
  "body": [
    {
      "end": 25,
      "expression": {
        "arguments": [
          {
            "end": 23,
            "left": {
              "end": 6,
              "name": "a",
              "range": [
                5,
                6,
              ],
              "start": 5,
              "type": "Identifier",
            },
            "operator": "instanceof",
            "range": [
              5,
              23,
            ],
            "right": {
              "end": 23,
              "left": {
                "end": 19,
                "name": "b",
                "range": [
                  18,
                  19,
                ],
                "start": 18,
                "type": "Identifier",
              },
              "operator": "+",
              "range": [
                18,
                23,
              ],
              "right": {
                "end": 23,
                "name": "c",
                "range": [
                  22,
                  23,
                ],
                "start": 22,
                "type": "Identifier",
              },
              "start": 18,
              "type": "BinaryExpression",
            },
            "start": 5,
            "type": "BinaryExpression",
          },
        ],
        "callee": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "end": 25,
        "optional": false,
        "range": [
          0,
          25,
        ],
        "start": 0,
        "type": "CallExpression",
      },
      "range": [
        0,
        25,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 25,
  "range": [
    0,
    25,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo( a instanceof b > c ) 1`] = `
{
  "body": [
    {
      "end": 25,
      "expression": {
        "arguments": [
          {
            "end": 23,
            "left": {
              "end": 19,
              "left": {
                "end": 6,
                "name": "a",
                "range": [
                  5,
                  6,
                ],
                "start": 5,
                "type": "Identifier",
              },
              "operator": "instanceof",
              "range": [
                5,
                19,
              ],
              "right": {
                "end": 19,
                "name": "b",
                "range": [
                  18,
                  19,
                ],
                "start": 18,
                "type": "Identifier",
              },
              "start": 5,
              "type": "BinaryExpression",
            },
            "operator": ">",
            "range": [
              5,
              23,
            ],
            "right": {
              "end": 23,
              "name": "c",
              "range": [
                22,
                23,
              ],
              "start": 22,
              "type": "Identifier",
            },
            "start": 5,
            "type": "BinaryExpression",
          },
        ],
        "callee": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "end": 25,
        "optional": false,
        "range": [
          0,
          25,
        ],
        "start": 0,
        "type": "CallExpression",
      },
      "range": [
        0,
        25,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 25,
  "range": [
    0,
    25,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo[ a + b ** c ] 1`] = `
{
  "body": [
    {
      "end": 17,
      "expression": {
        "computed": true,
        "end": 17,
        "object": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "optional": false,
        "property": {
          "end": 15,
          "left": {
            "end": 6,
            "name": "a",
            "range": [
              5,
              6,
            ],
            "start": 5,
            "type": "Identifier",
          },
          "operator": "+",
          "range": [
            5,
            15,
          ],
          "right": {
            "end": 15,
            "left": {
              "end": 10,
              "name": "b",
              "range": [
                9,
                10,
              ],
              "start": 9,
              "type": "Identifier",
            },
            "operator": "**",
            "range": [
              9,
              15,
            ],
            "right": {
              "end": 15,
              "name": "c",
              "range": [
                14,
                15,
              ],
              "start": 14,
              "type": "Identifier",
            },
            "start": 9,
            "type": "BinaryExpression",
          },
          "start": 5,
          "type": "BinaryExpression",
        },
        "range": [
          0,
          17,
        ],
        "start": 0,
        "type": "MemberExpression",
      },
      "range": [
        0,
        17,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 17,
  "range": [
    0,
    17,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo[ a + b / c ] 1`] = `
{
  "body": [
    {
      "end": 16,
      "expression": {
        "computed": true,
        "end": 16,
        "object": {
          "end": 3,
          "name": "foo",
          "range": [
            0,
            3,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "optional": false,
        "property": {
          "end": 14,
          "left": {
            "end": 6,
            "name": "a",
            "range": [
              5,
              6,
            ],
            "start": 5,
            "type": "Identifier",
          },
          "operator": "+",
          "range": [
            5,
            14,
          ],
          "right": {
            "end": 14,
            "left": {
              "end": 10,
              "name": "b",
              "range": [
                9,
                10,
              ],
              "start": 9,
              "type": "Identifier",
            },
            "operator": "/",
            "range": [
              9,
              14,
            ],
            "right": {
              "end": 14,
              "name": "c",
              "range": [
                13,
                14,
              ],
              "start": 13,
              "type": "Identifier",
            },
            "start": 9,
            "type": "BinaryExpression",
          },
          "start": 5,
          "type": "BinaryExpression",
        },
        "range": [
          0,
          16,
        ],
        "start": 0,
        "type": "MemberExpression",
      },
      "range": [
        0,
        16,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 16,
  "range": [
    0,
    16,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > foo[ a > b instanceof c ] 1`] = `
{
  "body": [
    {
      "expression": {
        "computed": true,
        "object": {
          "name": "foo",
          "type": "Identifier",
        },
        "optional": false,
        "property": {
          "left": {
            "left": {
              "name": "a",
              "type": "Identifier",
            },
            "operator": ">",
            "right": {
              "name": "b",
              "type": "Identifier",
            },
            "type": "BinaryExpression",
          },
          "operator": "instanceof",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "MemberExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > for ( a ** b + c ;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "+",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > for ( a + b ** c ;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "+",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > for ( a instanceof b + c ;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "instanceof",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "+",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > for ( a instanceof b > c ;;); 1`] = `
{
  "body": [
    {
      "body": {
        "type": "EmptyStatement",
      },
      "init": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "instanceof",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": ">",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "test": null,
      "type": "ForStatement",
      "update": null,
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > if ( a ** b + c ) ; 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "type": "EmptyStatement",
      },
      "test": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "+",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > if ( a + b ** c ) ; 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "type": "EmptyStatement",
      },
      "test": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "+",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "**",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > if ( a + b instanceof c ) ; 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "type": "EmptyStatement",
      },
      "test": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "+",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "instanceof",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > if ( a / b + c ) ; 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "type": "EmptyStatement",
      },
      "test": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "/",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "+",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > if ( a instanceof b + c ) ; 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "type": "EmptyStatement",
      },
      "test": {
        "left": {
          "name": "a",
          "type": "Identifier",
        },
        "operator": "instanceof",
        "right": {
          "left": {
            "name": "b",
            "type": "Identifier",
          },
          "operator": "+",
          "right": {
            "name": "c",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "type": "BinaryExpression",
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > if ( a instanceof b > c ) ; 1`] = `
{
  "body": [
    {
      "alternate": null,
      "consequent": {
        "type": "EmptyStatement",
      },
      "test": {
        "left": {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "operator": "instanceof",
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": ">",
        "right": {
          "name": "c",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "IfStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > x = a > b instanceof c 1`] = `
{
  "body": [
    {
      "end": 22,
      "expression": {
        "end": 22,
        "left": {
          "end": 1,
          "name": "x",
          "range": [
            0,
            1,
          ],
          "start": 0,
          "type": "Identifier",
        },
        "operator": "=",
        "range": [
          0,
          22,
        ],
        "right": {
          "end": 22,
          "left": {
            "end": 9,
            "left": {
              "end": 5,
              "name": "a",
              "range": [
                4,
                5,
              ],
              "start": 4,
              "type": "Identifier",
            },
            "operator": ">",
            "range": [
              4,
              9,
            ],
            "right": {
              "end": 9,
              "name": "b",
              "range": [
                8,
                9,
              ],
              "start": 8,
              "type": "Identifier",
            },
            "start": 4,
            "type": "BinaryExpression",
          },
          "operator": "instanceof",
          "range": [
            4,
            22,
          ],
          "right": {
            "end": 22,
            "name": "c",
            "range": [
              21,
              22,
            ],
            "start": 21,
            "type": "Identifier",
          },
          "start": 4,
          "type": "BinaryExpression",
        },
        "start": 0,
        "type": "AssignmentExpression",
      },
      "range": [
        0,
        22,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 22,
  "range": [
    0,
    22,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > x || y || z 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "name": "x",
            "type": "Identifier",
          },
          "operator": "||",
          "right": {
            "name": "y",
            "type": "Identifier",
          },
          "type": "LogicalExpression",
        },
        "operator": "||",
        "right": {
          "name": "z",
          "type": "Identifier",
        },
        "type": "LogicalExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > x, a ** b + c 1`] = `
{
  "body": [
    {
      "end": 13,
      "expression": {
        "end": 13,
        "expressions": [
          {
            "end": 1,
            "name": "x",
            "range": [
              0,
              1,
            ],
            "start": 0,
            "type": "Identifier",
          },
          {
            "end": 13,
            "left": {
              "end": 9,
              "left": {
                "end": 4,
                "name": "a",
                "range": [
                  3,
                  4,
                ],
                "start": 3,
                "type": "Identifier",
              },
              "operator": "**",
              "range": [
                3,
                9,
              ],
              "right": {
                "end": 9,
                "name": "b",
                "range": [
                  8,
                  9,
                ],
                "start": 8,
                "type": "Identifier",
              },
              "start": 3,
              "type": "BinaryExpression",
            },
            "operator": "+",
            "range": [
              3,
              13,
            ],
            "right": {
              "end": 13,
              "name": "c",
              "range": [
                12,
                13,
              ],
              "start": 12,
              "type": "Identifier",
            },
            "start": 3,
            "type": "BinaryExpression",
          },
        ],
        "range": [
          0,
          13,
        ],
        "start": 0,
        "type": "SequenceExpression",
      },
      "range": [
        0,
        13,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 13,
  "range": [
    0,
    13,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > x, a + b ** c 1`] = `
{
  "body": [
    {
      "end": 13,
      "expression": {
        "end": 13,
        "expressions": [
          {
            "end": 1,
            "name": "x",
            "range": [
              0,
              1,
            ],
            "start": 0,
            "type": "Identifier",
          },
          {
            "end": 13,
            "left": {
              "end": 4,
              "name": "a",
              "range": [
                3,
                4,
              ],
              "start": 3,
              "type": "Identifier",
            },
            "operator": "+",
            "range": [
              3,
              13,
            ],
            "right": {
              "end": 13,
              "left": {
                "end": 8,
                "name": "b",
                "range": [
                  7,
                  8,
                ],
                "start": 7,
                "type": "Identifier",
              },
              "operator": "**",
              "range": [
                7,
                13,
              ],
              "right": {
                "end": 13,
                "name": "c",
                "range": [
                  12,
                  13,
                ],
                "start": 12,
                "type": "Identifier",
              },
              "start": 7,
              "type": "BinaryExpression",
            },
            "start": 3,
            "type": "BinaryExpression",
          },
        ],
        "range": [
          0,
          13,
        ],
        "start": 0,
        "type": "SequenceExpression",
      },
      "range": [
        0,
        13,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 13,
  "range": [
    0,
    13,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > x, a + b instanceof c 1`] = `
{
  "body": [
    {
      "end": 21,
      "expression": {
        "end": 21,
        "expressions": [
          {
            "end": 1,
            "name": "x",
            "range": [
              0,
              1,
            ],
            "start": 0,
            "type": "Identifier",
          },
          {
            "end": 21,
            "left": {
              "end": 8,
              "left": {
                "end": 4,
                "name": "a",
                "range": [
                  3,
                  4,
                ],
                "start": 3,
                "type": "Identifier",
              },
              "operator": "+",
              "range": [
                3,
                8,
              ],
              "right": {
                "end": 8,
                "name": "b",
                "range": [
                  7,
                  8,
                ],
                "start": 7,
                "type": "Identifier",
              },
              "start": 3,
              "type": "BinaryExpression",
            },
            "operator": "instanceof",
            "range": [
              3,
              21,
            ],
            "right": {
              "end": 21,
              "name": "c",
              "range": [
                20,
                21,
              ],
              "start": 20,
              "type": "Identifier",
            },
            "start": 3,
            "type": "BinaryExpression",
          },
        ],
        "range": [
          0,
          21,
        ],
        "start": 0,
        "type": "SequenceExpression",
      },
      "range": [
        0,
        21,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 21,
  "range": [
    0,
    21,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > x, a / b + c 1`] = `
{
  "body": [
    {
      "end": 12,
      "expression": {
        "end": 12,
        "expressions": [
          {
            "end": 1,
            "name": "x",
            "range": [
              0,
              1,
            ],
            "start": 0,
            "type": "Identifier",
          },
          {
            "end": 12,
            "left": {
              "end": 8,
              "left": {
                "end": 4,
                "name": "a",
                "range": [
                  3,
                  4,
                ],
                "start": 3,
                "type": "Identifier",
              },
              "operator": "/",
              "range": [
                3,
                8,
              ],
              "right": {
                "end": 8,
                "name": "b",
                "range": [
                  7,
                  8,
                ],
                "start": 7,
                "type": "Identifier",
              },
              "start": 3,
              "type": "BinaryExpression",
            },
            "operator": "+",
            "range": [
              3,
              12,
            ],
            "right": {
              "end": 12,
              "name": "c",
              "range": [
                11,
                12,
              ],
              "start": 11,
              "type": "Identifier",
            },
            "start": 3,
            "type": "BinaryExpression",
          },
        ],
        "range": [
          0,
          12,
        ],
        "start": 0,
        "type": "SequenceExpression",
      },
      "range": [
        0,
        12,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 12,
  "range": [
    0,
    12,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Miscellaneous - Precedence > Miscellaneous - Precedence (pass) > x, a instanceof b + c 1`] = `
{
  "body": [
    {
      "end": 21,
      "expression": {
        "end": 21,
        "expressions": [
          {
            "end": 1,
            "name": "x",
            "range": [
              0,
              1,
            ],
            "start": 0,
            "type": "Identifier",
          },
          {
            "end": 21,
            "left": {
              "end": 4,
              "name": "a",
              "range": [
                3,
                4,
              ],
              "start": 3,
              "type": "Identifier",
            },
            "operator": "instanceof",
            "range": [
              3,
              21,
            ],
            "right": {
              "end": 21,
              "left": {
                "end": 17,
                "name": "b",
                "range": [
                  16,
                  17,
                ],
                "start": 16,
                "type": "Identifier",
              },
              "operator": "+",
              "range": [
                16,
                21,
              ],
              "right": {
                "end": 21,
                "name": "c",
                "range": [
                  20,
                  21,
                ],
                "start": 20,
                "type": "Identifier",
              },
              "start": 16,
              "type": "BinaryExpression",
            },
            "start": 3,
            "type": "BinaryExpression",
          },
        ],
        "range": [
          0,
          21,
        ],
        "start": 0,
        "type": "SequenceExpression",
      },
      "range": [
        0,
        21,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 21,
  "range": [
    0,
    21,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;
